added note for local inpainting images

--- a/image-inpainting-custom-container/Image Inpainting Container Build.ipynb
+++ b/image-inpainting-custom-container/Image Inpainting Container Build.ipynb
@@ -346,6 +346,9 @@
     "IMAGE_NAME = 'dog.png'\n",
     "IMAGE_MASK_NAME = 'dog_mask.png'\n",
     "\n",
+    "## NOTE:  If you just want to try this out locally, dog.png and dog_mask.png\n",
+    "## are included in the git repo, in the same directoy as this notebook.\n",
+    "\n",
     "bucket = s3.Bucket(BUCKET_NAME)\n",
     "new_image = bucket.Object(FOLDER+IMAGE_NAME)\n",
     "mask_image = bucket.Object(FOLDER+IMAGE_MASK_NAME)\n",
