fix for cleaning up resources

--- a/image-to-image-custom-container/Image to Image Container Build.ipynb
+++ b/image-to-image-custom-container/Image to Image Container Build.ipynb
@@ -1296,9 +1296,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "runtime_sm_client.delete_model(ModelName=model_name)\n",
-    "runtime_sm_client.delete_endpoint_config(EndpointConfigName=endpoint_config_name)\n",
-    "runtime_sm_client.delete_endpoint(EndpointName=endpoint_name)"
+    "sm_client = boto3.client(service_name='sagemaker')\n",
+    "sm_client.delete_model(ModelName=model_name)\n",
+    "sm_client.delete_endpoint_config(EndpointConfigName=endpoint_config_name)\n",
+    "sm_client.delete_endpoint(EndpointName=endpoint_name)"
    ]
   },
   {
