--- a/text-to-image-custom-container/Text to Image Container Build.ipynb
+++ b/text-to-image-custom-container/Text to Image Container Build.ipynb
@@ -31,7 +31,6 @@
     "4. Define and Deploy the model\n",
     "5. Test the new endpoint\n",
     "6. Clean up resources\n",
-    "6. Accelerate the inference using [NVFuser](https://pytorch.org/tutorials/intermediate/nvfuser_intro_tutorial.html) (Work in progress!)\n",
     "\n",
     "References:\n",
     "  * [Stable Diffusion Model on Hugging Face](https://huggingface.co/CompVis/stable-diffusion-v1-4)\n",
@@ -1142,94 +1141,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "runtime_sm_client.delete_model(ModelName=model_name)\n",
-    "runtime_sm_client.delete_endpoint_config(EndpointConfigName=endpoint_config_name)\n",
-    "runtime_sm_client.delete_endpoint(EndpointName=endpoint_name)"
+    "sm_client = boto3.client(service_name='sagemaker')\n",
+    "sm_client.delete_model(ModelName=model_name)\n",
+    "sm_client.delete_endpoint_config(EndpointConfigName=endpoint_config_name)\n",
+    "sm_client.delete_endpoint(EndpointName=endpoint_name)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9008e626",
-   "metadata": {},
-   "source": [
-    "## 7. Accelerate the inference using NVFuser (Work in Progress!)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a4a9c63",
-   "metadata": {},
-   "source": [
-    "From the [pytorch documentation](https://pytorch.org/tutorials/intermediate/nvfuser_intro_tutorial.html), \"nvFuser is a Deep Learning Compiler that just-in-time compiles fast and flexible GPU specific code to reliably accelerate users’ networks automatically, providing speedups for deep learning networks running on Volta and later CUDA accelerators by generating fast custom “fusion” kernels at runtime. nvFuser is specifically designed to meet the unique requirements of the PyTorch community, and it supports diverse network architectures and programs with dynamic inputs of varying shapes and strides.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "de43d4a1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in indexes: https://pypi.org/simple, https://pip.repos.neuron.amazonaws.com\n",
-      "Requirement already satisfied: functorch in /home/ec2-user/anaconda3/envs/python3/lib/python3.8/site-packages (0.2.1)\n",
-      "Requirement already satisfied: networkx in /home/ec2-user/anaconda3/envs/python3/lib/python3.8/site-packages (2.6.3)\n",
-      "Requirement already satisfied: torch<1.13,>=1.12.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.8/site-packages (from functorch) (1.12.1)\n",
-      "Requirement already satisfied: typing-extensions in /home/ec2-user/anaconda3/envs/python3/lib/python3.8/site-packages (from torch<1.13,>=1.12.1->functorch) (4.0.0)\n",
-      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2.2 is available.\n",
-      "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/python3/bin/python -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install functorch networkx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "5e960270",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Check to make sure we have all the required libraries at the right version number.\n",
-    "#This also needs to be run on an instance with a GPU, as it is a GPU acceleration\n",
-    "import torch\n",
-    "import torch.nn.functional as F\n",
-    "import functorch\n",
-    "from functorch.compile import memory_efficient_fusion\n",
-    "from copy import deepcopy\n",
-    "from typing import List\n",
-    "import time\n",
-    "import functools\n",
-    "import random\n",
-    "\n",
-    "if torch.__version__ < (1, 12, 0):\n",
-    "    raise RuntimeError(\n",
-    "        \"PyTorch >= 1.12.0 required, but your environment uses torch=={}\".format(\n",
-    "            torch.__version__\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "major, minor, _ = functorch.__version__.split(\".\")\n",
-    "if int(major) == 0 and int(minor) < 2:\n",
-    "    raise RuntimeError(\n",
-    "        \"FuncTorch >= 0.2.0 required, but your environment uses functorch=={}\".format(\n",
-    "            functorch.__version__\n",
-    "        )\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6cde9a8d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
