Added examples to README

--- a/cross-modality-container-ofa/Cross Modality OFA Container Build.ipynb
+++ b/cross-modality-container-ofa/Cross Modality OFA Container Build.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "pip install -r requirements.txt\n",
     "\n",
-    "pip install --upgrade torchvision boto3 gradio\n",
+    "pip install --upgrade gradio\n",
     "\n",
     "cd fairseq\n",
     "\n",
@@ -178,29 +178,8 @@
     "}\n",
     "`\n",
     "\n",
-    "For S3 access, add this policy.  *Note*:you may want to create a bucket for your images.\n",
-    "\n",
-    "`\n",
-    "{\n",
-    "  \"Version\": \"2012-10-17\",\n",
-    "  \"Statement\": [\n",
-    "    {\n",
-    "      \"Effect\": \"Allow\",\n",
-    "      \"Action\": [\"s3:ListBucket\"],\n",
-    "      \"Resource\": [\"arn:aws:s3:::YOURBUCKETNAME\"]\n",
-    "    },\n",
-    "    {\n",
-    "      \"Effect\": \"Allow\",\n",
-    "      \"Action\": [\n",
-    "        \"s3:PutObject\",\n",
-    "        \"s3:GetObject\",\n",
-    "        \"s3:DeleteObject\"\n",
-    "      ],\n",
-    "      \"Resource\": [\"arn:aws:s3:::YOURBUCKETNAME/*\"]\n",
-    "    }\n",
-    "  ]\n",
-    "}\n",
-    "`"
+    "For S3 access, attach AWS Managed IAM Policy **AmazonS3FullAccess** to the role used by AWS SageMaker\n",
+    "\n"
    ]
   },
   {
@@ -208,22 +187,9 @@
    "metadata": {},
    "source": [
     "# 2. Test the model locally\n",
-    "This allows a user to get a feel for what the model can do, and how to use the hyperparamerts.  Feel free to skip this step if you are already comfortable with the model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "!wget https://ofa-silicon.oss-us-west-1.aliyuncs.com/checkpoints/caption_large_best_clean.pt\n",
-    "!mkdir -p checkpoints\n",
-    "!mv caption_large_best_clean.pt checkpoints/ofa_large_clean.pt"
+    "This allows a user to get a feel for what the model can do, and how to use the hyperparamerts.  Feel free to skip this step if you are already comfortable with the model.\n",
+    "\n",
+    "Following fix is needed to workaround the version incompatibility between pytorch and horovod"
    ]
   },
   {
@@ -232,7 +198,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --upgrade torchvision boto3 gradio"
+    "!pip uninstall -y horovod\n",
+    "!HOROVOD_WITH_PYTORCH=1 \n",
+    "!pip install --no-cache-dir horovod"
    ]
   },
   {
@@ -475,6 +443,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "instruction=\"what is the cat wearing?\"\n",
+    "output_img, tokens=general_interface(image,instruction)\n",
+    "print(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instruction=' which region does the text \" eyes \" describe?'\n",
+    "output_img, tokens=general_interface(image,instruction)\n",
+    "Image.fromarray(output_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -522,9 +514,42 @@
    },
    "outputs": [],
    "source": [
+    "instruction=\"What is the color of the cat?\"\n",
+    "output_img, tokens=general_interface(image,instruction)\n",
+    "print(f\"color of the cat is: {tokens}\")\n",
+    "\n",
     "instruction=\"What is the color of the largest dog?\"\n",
     "output_img, tokens=general_interface(image,instruction)\n",
-    "print(tokens)"
+    "print(f\"Color of the largest dog is {tokens}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instruction=' which region does the text \" cat \" describe?'\n",
+    "output_img, tokens=general_interface(image,instruction)\n",
+    "Image.fromarray(output_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from io import BytesIO\n",
+    "\n",
+    "response = requests.get(\"https://hf.space/embed/OFA-Sys/OFA-Visual_Grounding/file/flowers.jpg\")\n",
+    "image = Image.open(BytesIO(response.content))\n",
+    "\n",
+    "image\n",
+    "instruction=' which region does the text \" flower \" describe?'\n",
+    "output_img, tokens=general_interface(image,instruction)\n",
+    "Image.fromarray(output_img)"
    ]
   },
   {
@@ -1161,19 +1186,7 @@
     "    })\n",
     "    print(rv.data)\n",
     "    data = json.loads(rv.data)\n",
-    "    assert \"mask\" in data['output']\n",
-    "\n",
-    "def test_visual_grounding(client):\n",
-    "    \"\"\"Test visual grounding\"\"\"\n",
-    "    print(\"inside the test function\")\n",
-    "    rv = client.post('/invocations', json={\n",
-    "        \"ofa_task\":\"OFA_TASK_VISUAL_GROUNDING\",\n",
-    "        \"bucket_name\" : \"amplify-headlessprojectname-dev-150820-deployment\",\n",
-    "        \"key_name\" : file_name,\n",
-    "        \"instruction\": \"cat\"\n",
-    "    })\n",
-    "\n",
-    "\n"
+    "    assert \"mask\" in data['output']\n"
    ]
   },
   {
@@ -1250,7 +1263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, clean out any old Docker images to prevent your Jyputer instance from running out of space."
+    "Now let us run the docker image locally and test the model using unit tests"
    ]
   },
   {
@@ -1263,9 +1276,20 @@
    },
    "outputs": [],
    "source": [
+    "%%capture capt\n",
+    "%%time\n",
     "algorithm_name=\"ofa\"\n",
     "!docker build  -t $algorithm_name container/.\n",
     "!docker run -it $algorithm_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "capt.stderr"
    ]
   },
   {
@@ -1276,6 +1300,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the errror from executing above shell script"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1285,6 +1316,7 @@
    },
    "outputs": [],
    "source": [
+    "%%capture capt\n",
     "%%sh\n",
     "set -x\n",
     "\n",
@@ -1314,7 +1346,7 @@
     "$(aws ecr get-login --region ${region} --no-include-email)\n",
     "\n",
     "# Get the login command from ECR in order to pull down the SageMaker PyTorch image\n",
-    "$(aws ecr get-login --registry-ids 520713654638 --region ${region} --no-include-email)\n",
+    "#$(aws ecr get-login --registry-ids 520713654638 --region ${region} --no-include-email)\n",
     "\n",
     "# Build the docker image locally with the image name and then push it to ECR\n",
     "# with the full name.\n",
@@ -1323,6 +1355,22 @@
     "docker tag ${algorithm_name} ${fullname}\n",
     "\n",
     "docker push ${fullname}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the errror from executing above shell script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "capt.stdout"
    ]
   },
   {
@@ -1592,9 +1640,10 @@
    },
    "outputs": [],
    "source": [
-    "runtime_sm_client.delete_model(ModelName=model_name)\n",
-    "runtime_sm_client.delete_endpoint_config(EndpointConfigName=endpoint_config_name)\n",
-    "runtime_sm_client.delete_endpoint(EndpointName=endpoint_name)"
+    "sm_client = boto3.client(service_name='sagemaker')\n",
+    "sm_client.delete_model(ModelName=model_name)\n",
+    "sm_client.delete_endpoint_config(EndpointConfigName=endpoint_config_name)\n",
+    "sm_client.delete_endpoint(EndpointName=endpoint_name)"
    ]
   },
   {
