--- a/cross-modality-container-ofa/Cross Modality OFA Container Build.ipynb
+++ b/cross-modality-container-ofa/Cross Modality OFA Container Build.ipynb
@@ -14,11 +14,11 @@
    "metadata": {},
    "source": [
     "From [OFA GitHub](https://github.com/OFA-Sys/OFA):\n",
-    "OFA is a unified sequence-to-sequence pretrained model (support English and Chinese) that unifies modalities (i.e., cross-modality, vision, language) and tasks (finetuning and prompt tuning are supported): image captioning (1st at the MSCOCO Leaderboard), VQA , visual grounding, text-to-image generation, text classification, text generation, image classification, etc. We provide step-by-step instructions for pretraining and fine tuning and corresponding checkpoints (check official ckpt [EN|CN] or huggingface ckpt).\n",
+    "OFA is a unified sequence-to-sequence pre-trained model (support English and Chinese) that unifies modalities (i.e., cross-modality, vision, language) and tasks (finetuning and prompt tuning are supported): image captioning (1st at the MSCOCO Leaderboard), VQA , visual grounding, text-to-image generation, text classification, text generation, image classification, etc. We provide step-by-step instructions for pretraining and fine tuning and corresponding checkpoints (check official ckpt [EN|CN] or huggingface ckpt).\n",
     "\n",
     "This notebook will walk through the process of deploying the OFA model to an AWS SageMaker endpoint.  We'll start by downloading the model locally to test it out, but note this will only work if you have access to a GPU.  Next, we create a custom docker container which contains the model.  In this use case, we will have the endpoint put the generated images directly in an S3 bucket, and return the location of the image.\n",
     "\n",
-    "Note that this model is large.  You'll want to make sure to use an instance type with at least 15GB of storage in order to have space to download the model and package up the container.  This notebook was tested on a ml.g4dn.4xlarge with 25GB of EBS storage.\n",
+    "Note that this model is large.  You'll want to make sure to use an instance type with at least 15GB of storage in order to have space to download the model and package up the container.  This notebook was tested on a ml.g4dn.2xlarge with 25GB of EBS storage.\n",
     "\n",
     "The notebook follows these basic steps:\n",
     "1. Install Dependencies (for local testing)\n",
@@ -55,7 +55,7 @@
     "# 1. Install Dependencies\n",
     "\n",
     "### 1(a) Setup Local Environment\n",
-    "This step creates the required folders and download the ofa-large pretrained model\n",
+    "This step creates the required folders and download the ofa-large pre-trained model\n",
     "Make sure you start in the same directory that this notebook is in."
    ]
   },
@@ -100,8 +100,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1(b) Set up SageMaker envionment\n",
-    "This gives us access to basic information and functionality for our SageMaker envionment, including the IAM role we are going to use in the next setup step."
+    "### 1(b) Set up SageMaker enviornment\n",
+    "This gives us access to basic information and functionality for our SageMaker environment, including the IAM role we are going to use in the next setup step."
    ]
   },
   {
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add this policy for ECR access, note that you are giving permisson to create a new repository, as well as push images to it.\n",
+    "Add this policy for ECR access, note that you are giving permission to create a new repository, as well as push images to it.\n",
     "`\n",
     "{\n",
     "    \"Version\": \"2012-10-17\",\n",
@@ -186,9 +186,9 @@
    "metadata": {},
    "source": [
     "# 2. Test the model locally\n",
-    "This allows a user to get a feel for what the model can do, and how to use the hyperparamerts.  Feel free to skip this step if you are already comfortable with the model.\n",
+    "This allows a user to get a feel for what the model can do, and how to use the hyperparameters. Feel free to skip this step if you are already comfortable with the model.\n",
     "\n",
-    "Following fix is needed to workaround the version incompatibility between pytorch and horovod"
+    "Following fix is needed to workaround the version incompatibility between Pytorch and horovod"
    ]
   },
   {
@@ -556,7 +556,7 @@
    "metadata": {},
    "source": [
     "## 3. Create the custom inference script\n",
-    "This is the script that will run the inference.  It is packaged in a Flask webservice to unload the request, and pack up the response.  Note that you can add your own bucket name and folder in that bucket, for where you want the endpoint to deposit the generated images."
+    "This is the script that will run the inference.  It is packaged in a Flask web service to unload the request, and pack up the response.  Note that you can add your own bucket name and folder in that bucket, for where you want the endpoint to deposit the generated images."
    ]
   },
   {
@@ -1039,7 +1039,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have all the files we need for our container, we create the Dockerfile.  This is the instuctions for Docker on how to build the container.  Most of this file is the same for any custom container, but note the `RUN pip install` line, which installs the specific pytorch and HuggingFace libraries we need for our model.  These are the same ones we used for local testing, as well as boto3 to handle the upload of generated images to S3."
+    "Now that we have all the files we need for our container, we create the Dockerfile.  This is the instructions for Docker on how to build the container.  Most of this file is the same for any custom container, but note the `RUN pip install` line, which installs the specific PyTorch and HuggingFace libraries we need for our model.  These are the same ones we used for local testing, as well as boto3 to handle the upload of generated images to S3."
    ]
   },
   {
@@ -1242,7 +1242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, clean out any old Docker images to prevent your Jyputer instance from running out of space."
+    "First, clean out any old Docker images to prevent your Jupyter instance from running out of space."
    ]
   },
   {
@@ -1625,7 +1625,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Clean up resources\n",
+    "## 7. Clean up resources\n",
     "Use this section to delete any of the resources we have deployed using this notebook.  Don't forget to shut off the instance running this notebook when you are done!  You may also want to head over to S3 and clear out your image bucket."
    ]
   },
