--- a/text-to-image-custom-container/Text to Image Container Build.ipynb
+++ b/text-to-image-custom-container/Text to Image Container Build.ipynb
@@ -117,7 +117,7 @@
     "The model weights are stored in git, but because they are so big they require Git's Large File Storage (LFS) to download.  This installation instruction assumes you are running on a SageMaker notebook instance, but if you are in another environment you can find installation instructions [here](https://git-lfs.github.com/).  \n",
     "\n",
     "\n",
-    "Open a terminal by going back to the Juypter homepage, and clicking on the \"New\" dropdown.  Run these commands after creating a HuggingFace account and accepting the license at the main repo.  At the git clone stage, it will ask for your HuggingFace username and password, which must be an account that has accepted the Stable Diffusion terms and conditions.\n",
+    "Open a terminal by going back to the Jupyter homepage, and clicking on the \"New\" dropdown.  Run these commands after creating a HuggingFace account and accepting the license at the main repo.  At the git clone stage, it will ask for your HuggingFace username and password, which must be an account that has accepted the Stable Diffusion terms and conditions.\n",
     "\n",
     "Make sure you start in the same directory that this notebook is in.\n",
     "\n",
@@ -334,7 +334,7 @@
    "id": "b045fe34",
    "metadata": {},
    "source": [
-    "### You can use the following cell to try out a few different promps and hyperparameters.\n",
+    "### You can use the following cell to try out a few different prompts and hyperparameters.\n",
     "\n",
     "The default hyperparameter values are:\n",
     "  * guidance_scale=7.5 On a scale from 0-10, how much should the prompt influence the result.\n",
