--- a/cross-modality-container-ofa/Cross Modality OFA Container Build.ipynb
+++ b/cross-modality-container-ofa/Cross Modality OFA Container Build.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "This notebook will walk through the process of deploying the OFA model to an AWS SageMaker endpoint.  We'll start by downloading the model locally to test it out, but note this will only work if you have access to a GPU.  Next, we create a custom docker container which contains the model.  In this use case, we will have the endpoint put the generated images directly in an S3 bucket, and return the location of the image.\n",
     "\n",
-    "Note that this model is large.  You'll want to make sure to use an instance type with at least 15GB of storage in order to have space to download the model and package up the container.  This notebook was tested on a ml.g4dn.2xlarge with 25GB of EBS storage.\n",
+    "Note that this model is large.  You'll want to make sure to use an instance type with at least 15GB of storage in order to have space to download the model and package up the container.  This notebook was tested on a ml.g4dn.2xlarge with 25GB of EBS storage, you can also run it on CPU based instances but the performance might be impacted.\n",
     "\n",
     "The notebook follows these basic steps:\n",
     "1. Install Dependencies (for local testing)\n",
@@ -33,7 +33,6 @@
     "\n",
     "References:\n",
     "  * [OFA Model on Hugging Face](https://huggingface.co/OFA-Sys/OFA-large)\n",
-    "  * [Custom container packaging code example](https://github.com/RamVegiraju/SageMaker-Deployment/tree/master/RealTime/BYOC/PreTrained-Examples/SpacyNER)\n",
     "\n",
     "Container Structure:  This should be the directory structure locally, in order to pack everything correctly into your container. ([reference](https://sagemaker-workshop.com/custom/containers.html))  You will already have this structure if you cloned the git repo, if not, following the directions in this notebook will rebuild this structure and all required files.\n",
     "- This Notebook\n",
@@ -1384,7 +1383,7 @@
    "metadata": {},
    "source": [
     "### 5 a) Define the model object\n",
-    "Now that the container is built, we can start to set up the SageMaker endpoint.  The first step is to create a [SageMaker model object](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/sagemaker.html#SageMaker.Client.create_model), which is a unique name for the model, the location of the image we just built, and the role the endpoint should use.  Here we use the same role that is used by this notebook."
+    "Now that the container is built, we can start to set up the SageMaker endpoint.  The first step is to create a [SageMaker model object](https://docs.aws.amazon.com/sagemaker/latest/dg/realtime-endpoints-deployment.html#realtime-endpoints-deployment-create-model), which is a unique name for the model, the location of the image we just built, and the role the endpoint should use.  Here we use the same role that is used by this notebook."
    ]
   },
   {
@@ -1438,7 +1437,7 @@
    "metadata": {},
    "source": [
     "### 5 b) Define the Endpoint Configuration\n",
-    "Now that we've defined what the model object is, we set up the [Endpoint Configuration](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/sagemaker.html#SageMaker.Client.create_endpoint_config).  This is where we set the details on what kind of machines the model should be running on.  Here, we set it to g4dn.4xlarge, which is an instance type with one GPU.  We also set our autoscaling group to 1, meaning only a single instance max will be added to the group.  This helps to keep cost down while testing."
+    "Now that we've defined what the model object is, we set up the [Endpoint Configuration](https://docs.aws.amazon.com/sagemaker/latest/dg/realtime-endpoints-deployment.html#realtime-endpoints-deployment-create-endpoint-config).  This is where we set the details on what kind of machines the model should be running on.  Here, we set it to g4dn.2xlarge, which is an instance type with one GPU.  We also set our autoscaling group to 1, meaning only a single instance max will be added to the group.  This helps to keep cost down while testing."
    ]
   },
   {
@@ -1454,7 +1453,7 @@
     "endpoint_config_name =  f\"{model}-config{strftime('%Y-%m-%d-%H-%M-%S', gmtime())}\"\n",
     "print('Endpoint config name: ' + endpoint_config_name)\n",
     "\n",
-    "instance_type = 'ml.g4dn.4xlarge'\n",
+    "instance_type = 'ml.g4dn.2xlarge'\n",
     "\n",
     "create_endpoint_config_response = sm_client.create_endpoint_config(\n",
     "    EndpointConfigName = endpoint_config_name,\n",
@@ -1473,7 +1472,7 @@
    "metadata": {},
    "source": [
     "### 5 c) Deploy the endpoint\n",
-    "Now that we have set up our configuration for the model and for the endpoint, we can bring these two together and actually [deploy the model](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/sagemaker.html#SageMaker.Client.create_endpoint).  Note that this step make take up to 10 minutes as the endpoint is turned on."
+    "Now that we have set up our configuration for the model and for the endpoint, we can bring these two together and actually [deploy the model](https://docs.aws.amazon.com/sagemaker/latest/dg/realtime-endpoints-deployment.html#w1131aac27c17b9b9b7c29).  Note that this step make take up to 10 minutes as the endpoint is turned on."
    ]
   },
   {
