--- a/image-inpainting-custom-container/Image Inpainting Container Build.ipynb
+++ b/image-inpainting-custom-container/Image Inpainting Container Build.ipynb
@@ -19,9 +19,9 @@
     "\n",
     "Inpainting is the process of using a mask to focus Stable Diffusion on a specific part of an image.  This allows you to keep parts of an image that you like, while allowing the algorithm to change other parts of the image according to a prompt.  The mask is an image the same size as the image you want to change.  However, the mask is limited to either black or white pixels.  Black is used to indicate regions where the subject image should not be changed, and white indicates regions that will be allowed to change.\n",
     "\n",
-    "This notebook will walk through the process of deploying the Stable Diffusion model to an AWS SageMaker endpoint, using an Inpainting pipeline.  We'll start by downloading the model locally to test it out, but note this will only work if you have access to a GPU.  Next, we create a custom docker container which contains the model.  In this use case, we will have the endpoint pull the starting image and mask from S3, and put the generated images directly in an S3 bucket, then return the location of the image.\n",
+    "This notebook will walk through the process of deploying the Stable Diffusion model to an AWS SageMaker endpoint, using an Inpainting pipeline.  We'll start by downloading the model locally to test it out.  Next, we create a custom docker container which contains the model.  In this use case, we will have the endpoint pull the starting image and mask from S3, and put the generated images directly in an S3 bucket, then return the location of the image.\n",
     "\n",
-    "Note that this model is large.  You'll want to make sure to use an instance type with at least 15GB of storage in order to have space to download the model and package up the container.  This notebook was tested on a ml.g4dn.2xlarge with 25GB of EBS storage.\n",
+    "Note that this model is large.  You'll want to make sure to use an instance type with at least 15GB of storage in order to have space to download the model and package up the container.  This notebook was tested on a ml.g4dn.2xlarge with 25GB of EBS storage, you can also run it on CPU based instances but the performance might be impacted.\n",
     "\n",
     "While the Stable Diffusion model is free and open source, it does require agreeing to the terms and conditions on Hugging Face.  In order to download this model, you will need to create a free HuggingFace account, and then visit the [stable diffusion model card](https://huggingface.co/CompVis/stable-diffusion-v1-4) and agree to the terms and conditions.  Once that is done, visit your [Hugging Face Access Tokens page](https://huggingface.co/settings/tokens) and create a token for use in this notebook.\n",
     "\n",
@@ -36,7 +36,6 @@
     "\n",
     "References:\n",
     "  * [Stable Diffusion Model on Hugging Face](https://huggingface.co/CompVis/stable-diffusion-v1-4)\n",
-    "  * [Custom container packaging code example](https://github.com/RamVegiraju/SageMaker-Deployment/tree/master/RealTime/BYOC/PreTrained-Examples/SpacyNER)\n",
     "\n",
     "Container Structure:  This should be the directory structure locally, in order to pack everything correctly into your container. ([reference](https://sagemaker-workshop.com/custom/containers.html))  You will already have this structure if you cloned the git repo, if not, following the directions in this notebook will rebuild this structure and all required files.\n",
     "- This Notebook\n",
@@ -341,8 +340,8 @@
     "s3 = boto3.resource('s3')\n",
     "from PIL import Image\n",
     "import io\n",
-    "BUCKET_NAME = \"justin-prototypes\"\n",
-    "FOLDER = \"botvango/\"\n",
+    "BUCKET_NAME = \"YOUR_BUKCET_NAME\"\n",
+    "FOLDER = \"YOUR_BUKCET_PREFIX_NAME/\"\n",
     "IMAGE_NAME = 'dog.png'\n",
     "IMAGE_MASK_NAME = 'dog_mask.png'\n",
     "\n",
@@ -548,8 +547,8 @@
     "local_model_dir = \"./stable-diffusion-v1-4\"\n",
     "\n",
     "#Replace this bucket and folder name with your own location for the images to be delivered to.\n",
-    "BUCKET_NAME = \"justin-prototypes\"\n",
-    "FOLDER = \"botvango/\"\n",
+    "BUCKET_NAME = \"YOUR_BUKCET_NAME\"\n",
+    "FOLDER = \"YOUR_BUKCET_PREFIX_NAME/\"\n",
     "\n",
     "#Load model from our local weights\n",
     "pipe = StableDiffusionInpaintPipeline.from_pretrained(local_model_dir)\n",
@@ -1502,7 +1501,7 @@
    "metadata": {},
    "source": [
     "### 5 a) Define the model object\n",
-    "Now that the container is built, we can start to set up the SageMaker endpoint.  The first step is to create a [SageMaker model object](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/sagemaker.html#SageMaker.Client.create_model), which is a unique name for the model, the location of the image we just built, and the role the endpoint should use.  Here we use the same role that is used by this notebook."
+    "Now that the container is built, we can start to set up the SageMaker endpoint.  The first step is to create a [SageMaker model object](https://docs.aws.amazon.com/sagemaker/latest/dg/realtime-endpoints-deployment.html#realtime-endpoints-deployment-create-model), which is a unique name for the model, the location of the image we just built, and the role the endpoint should use.  Here we use the same role that is used by this notebook."
    ]
   },
   {
@@ -1548,7 +1547,7 @@
    "metadata": {},
    "source": [
     "### 5 b) Define the Endpoint Configuration\n",
-    "Now that we've defined what the model object is, we set up the [Endpoint Configuration](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/sagemaker.html#SageMaker.Client.create_endpoint_config).  This is where we set the details on what kind of machines the model should be running on.  Here, we set it to g4dn.2xlarge, which is an instance type with one GPU.  We also set our autoscaling group to 1, meaning only a single instance max will be added to the group.  This helps to keep cost down while testing."
+    "Now that we've defined what the model object is, we set up the [Endpoint Configuration](https://docs.aws.amazon.com/sagemaker/latest/dg/realtime-endpoints-deployment.html#realtime-endpoints-deployment-create-endpoint-config).  This is where we set the details on what kind of machines the model should be running on.  Here, we set it to g4dn.2xlarge, which is an instance type with one GPU.  We also set our autoscaling group to 1, meaning only a single instance max will be added to the group.  This helps to keep cost down while testing."
    ]
   },
   {
@@ -1590,7 +1589,7 @@
    "metadata": {},
    "source": [
     "### 5 c) Deploy the endpoint\n",
-    "Now that we have set up our configuration for the model and for the endpoint, we can bring these two together and actually [deploy the model](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/sagemaker.html#SageMaker.Client.create_endpoint).  Note that this step make take up to 10 minutes as the endpoint is turned on."
+    "Now that we have set up our configuration for the model and for the endpoint, we can bring these two together and actually [deploy the model](https://docs.aws.amazon.com/sagemaker/latest/dg/realtime-endpoints-deployment.html#w1131aac27c17b9b9b7c29).  Note that this step make take up to 10 minutes as the endpoint is turned on."
    ]
   },
   {
@@ -1653,8 +1652,8 @@
     "s3 = boto3.resource('s3')\n",
     "from PIL import Image\n",
     "import io\n",
-    "BUCKET_NAME = \"justin-prototypes\"\n",
-    "FOLDER = \"botvango/\""
+    "BUCKET_NAME = \"YOUR_BUKCET_NAME\"\n",
+    "FOLDER = \"YOUR_BUKCET_PREFIX_NAME/\""
    ]
   },
   {
