added results parameters info.

--- a/text-to-image-custom-container/Text to Image Container Build.ipynb
+++ b/text-to-image-custom-container/Text to Image Container Build.ipynb
@@ -367,13 +367,14 @@
     "  * guidance_scale=7.5 On a scale from 0-10, how much should the prompt influence the result.\n",
     "  * num_inference_steps=50 On a scale from 0-100, how many steps should the model take?  A higher number means a longer run time, with higher quality results.\n",
     "  * height=512  This must be >512 and a multiple of 8.  Either height or width should be 512\n",
-    "  * width=512  This must be >512 and a multiple of 8.  Either height or width should be 512\n"
+    "  * width=512  This must be >512 and a multiple of 8.  Either height or width should be 512\n",
+    "  * results=1 This isn't really a hyperparameter, but it tells the algorithm how many alternative images you would like to see using the same prompt.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98d871be",
+   "id": "4b0493de",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "b76fcd20",
    "metadata": {},
    "outputs": [
@@ -479,8 +480,8 @@
     "local_model_dir = \"./stable-diffusion-v1-4\"\n",
     "\n",
     "#Replace this bucket and folder name with your own location for the images to be delivered to.\n",
-    "BUCKET_NAME = \"justin-prototypes\"\n",
-    "FOLDER = \"botvango/\"\n",
+    "BUCKET_NAME = \"YOUR BUCKET NAME HERE\"\n",
+    "FOLDER = \"YOUR FOLDER NAME HERE/\"\n",
     "\n",
     "#Load model from our local weights\n",
     "pipe = StableDiffusionPipeline.from_pretrained(local_model_dir)\n",
@@ -1177,14 +1178,14 @@
     "s3 = boto3.resource('s3')\n",
     "from PIL import Image\n",
     "import io\n",
-    "BUCKET_NAME = \"justin-prototypes\"\n",
-    "FOLDER = \"botvango/\""
+    "BUCKET_NAME = \"YOUR BUCKET NAME HERE\"\n",
+    "FOLDER = \"YOUR FOLDER NAME HERE/\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "405ec18a",
+   "id": "052ffffd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1192,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "078a605f",
+   "id": "7eb12bb8",
    "metadata": {},
    "outputs": [
     {
